--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -21,5 +21,29 @@
         margin: 0;
       }
     }
+    .callToActions {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+
+      ul,
+      li {
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
+        list-style-type: none;
+
+        a {
+          font-size: 18px;
+          line-height: 1;
+          color: black;
+          text-decoration: none;
+          text-transform: uppercase;
+        }
+      }
+    }
   }
 }
