--- a/src/components/SignUp/styles.scss
+++ b/src/components/SignUp/styles.scss
@@ -1,4 +1,4 @@
-.signin {
+.signup {
   display: block;
   width: 100%;
   max-width: 40rem;
@@ -17,11 +17,11 @@
       width: 100%;
       text-align: center;
       padding: 0;
-      margin: 0 auto 3rem;
+      margin: 0 auto;
     }
 
-    .socialSignIn {
-      margin: 0.5rem auto 0;
+    .formWrap {
+      margin: 3rem auto 0;
     }
   }
 }
