--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -21,6 +21,41 @@
         margin: 0;
       }
     }
+
+    nav {
+      display: block;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+
+      ul,
+      ul li {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+      }
+
+      ul {
+        text-align: center;
+
+        li {
+          margin: 0 10px;
+          list-style-type: none;
+          display: inline-block;
+
+          a {
+            font-size: 18px;
+            line-height: 6.5rem;
+            vertical-align: middle;
+            color: black;
+            text-decoration: none;
+            text-transform: uppercase;
+          }
+        }
+      }
+    }
+
     .callToActions {
       position: absolute;
       right: 10px;
